[gd_scene load_steps=3 format=3 uid="uid://dy2uqjqq1chmo"]

[ext_resource type="Script" path="res://meteor.gd" id="1_dvqjf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f3yrw"]
radius = 39.0

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_dvqjf")

[node name="MeteorGreyBig1" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.888614, 0.761905)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f3yrw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
